tooling/nargo_cli/tests/snapshots/execution_success/array_dynamic_blackbox_input/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "leaf",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "path",
        "type": {
          "kind": "array",
          "length": 64,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      },
      {
        "name": "index",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "root",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+3dB5QVxbYG4JoecpYkCMIBQRAEuyYwMwiCIAqiIAqiIEoazDlnUREVURRFURRFUcw555xzzjnnrAj6qpvqe4u27fWu83et/tdUrVW3q3fxzttdtec7xdDv3SKxqjUqFuLgOqvGRaoX62vQGsRiRQkxLyFWnBCrkxCrmxCrlxCrnxBrkBBrmBBrlBBrnBBrkhBrmhBrlhBrnhBrkRBbIyHWMiHWKiHWOiHWJiHWNiG2ZkKsXUKsfUJsrYRYh4RYx4TY2gmxTgmxzgmxQkKsS0Ksa0JsnYRYt4RY94TYugmxHgmxngmx9RJivRJivRNi6yfE+iTE+ibENkiI+QkxmRArSYiVJsTKEmLlCbF+CbGKhFhlQqwqIdY/IbZhQmxAQmxgQmyjhNighNjghNjGCbEhCbGhCbFNEmLDEmKbJsQ2S4gNT4iNSIhtnhAbmRDbIiG2ZUJsVEJsdEJsq4TYmITY1gmxbRJiYxNi4xJi2ybExifEtkuIbZ8Qm5AQm5gQ2yEhNikhtmNCbKeE2GSxykAzNiXhz01NiE1LiE1PiFUnxGYkxHZOiO2SENs1IbZbQmz3hNgeCbE9E2J7JcT2TojtkxDbNyG2X0Js/4TYAQmxAxNiByXEDk6IHZIQOzQhdlhC7PCE2BEJsSMTYkclxI5OiB2jY/poGJ7z4q1IXwfrq1+zJifjPstPSBf12SXmWszU12NFbAGDic6x2LHGokWtOMNFLPX7lZVVV5RUy1I5xS+pmlpZ7peVT+1XKStleWX59JLK0tLqyrLKiqqpVRV+lSwrrZYzyqtKq2esajMBnzVDJ3Ys7hn9Onod42spBL4okXmb+R6XZcLHZfC5xwOLIavnPt5YYNDn+v+LgDX7gatebY39f9lW/ehWZyGgjAbmWszS1xOiBYm0CwKFWALFGS7Yv/ysEl2UcpbAFfgJGW0kquCiPGeJbL5y0XnOBuZZrOsw+rzZtbwLvR513JqstiZmi8AbrK85cOs/PxsnCtTPRkkIe52E58d8vi+jz0N/+ePW4L+OoXMUyBzt/b2sxMedSqZZO5WcpK8nRwsSnUqCQCGWAPbvYKsvWE1PJScJnBQnZ7SR6G/7kwT+pzloXv72+T/PPAf4zKyKI9cgqxwLIpvaBBfn6l+JNS3OU4B52fyNIiJv299cc/X11GhBom+uIFCIJYD+7eEpAvfNNVfgCvBUwfHNNVc4xYFYZKZ4UQY5hg2t+BxgcZ4mOBVH5G1b8Xn6enq0IJHiQaAQSwCt+GkCp/g8gSvA0wWH4vOEUxyIRWaKd8kgx7Dl+Sx+Bi6vEpuKI/K2rfh8fT0zWpBI8SBQiCWAVvwMgVN8vsAV4JmCQ/H5wikOxCIzxb0Mcgxbns/iZwlOxRF521Z8gb6eHS1IpHgQKMQSQCt+lsApvkDgCvBswaH4AuEUB2KRmeJdM8gxbHk+i5+Dy6vUpuKIvG0rvlBfz40WJFI8CBRiCaAVP0fgFF8ocAV4ruBQfKFwigOxyEzx4gxyDFuez+LnCU7FEXnbVnyRvp4fLUikeBAoxBJAK36ewCm+SOAK8HzBofgi4RQHYpGZ4utkkGPY8nwWvwCXV5lNxRF521Z8sb5eGC1IpHgQKMQSQCt+gcApvljgCvBCwaH4YuEUB2KRmeJ1MsgxbHk+i18kOBVH5G1b8SX6enG0IJHiQaAQSwCt+EUCp/gSgSvAiwWH4kuEUxyIRWaKd8sgx7Dl+Sx+CS6vcpuKI/K2rfhSfb00WpBI8SBQiCWAVvwSgVN8qcAV4KWCQ/GlwikOxCIzxetmkGPY8nwWv0xwKo7I27biy/T18mhBIsWDQCGWAFrxywRO8WUCV4CXCw7FlwmnOBCLzBTvnkGOYcvzWfwKXF79bCqOyNu24lfq61XRgkSKB4FCLAG04lcInOJXClwBXiU4FL9SOMWBWGSmeL0Mcgxbns/iVwtOxRF521b8Gn29NlqQSPEgUIglgFb8aoFT/BqBK8BrBYfi1winOBCLzBRfN4Mcw5bns/h1uLwqbCqOyNu24tfr6w3RgkSKB4FCLAG04tcJnOLXC1wB3iA4FL9eOMWBWGSmeP0Mcgxbns/iNwpOxRF521b8Jn29OVqQSPEgUIglgFb8RoFT/CaBK8CbBYfiNwmnOBCLzBTvkUGOYcvzWfwWXF6VNhVH5G1b8Vv19bZoQSLFg0AhlgBa8VsETvFbBa4AbxMcit8qnOJALDJTvEEGOYYtz2fx2wWn4oi8bSt+h77eGS1IpHgQKMQSQCt+u8ApfofAFeCdgkPxO4RTHIhFZor3zCDHsOX5LH4XLq8qm4oj8rat+N36ek+0IJHiQaAQSwCt+F0Cp/jdAleA9wgOxe8WTnEgFpkp3jCDHMOW57P4vYJTcUTethW/T1/vjxYkUjwIFGIJoBW/V+AUv0/gCvB+waH4fcIpDsQiM8XXyyDHsOX5LP4ALq8pNhVH5G1b8Qf19aFoQSLFg0AhlgBa8QcETvEHBa4AHxIcij8onOJALDJTvFEGOYYtz2fxhwWn4oi8bSv+iL4+Gi1IpHgQKMQSQCv+sMAp/ojAFeCjgkPxR4RTHIhFZor3yiDHsOX5LP4YLq+pNhVH5G1b8cf19YloQSLFg0AhlgBa8ccETvHHBa4AnxAcij8unOJALDJTvHEGOYYtz2fxJwWn4oi8bSv+lL4+HS1IpHgQKMQSQCv+pMAp/pTAFeDTgkPxp4RTHIhFZor3ziDHsOX5LP4MLq9pNhVH5G1b8Wf19bloQSLFg0AhlgBa8WcETvFnBa4AnxMcij8rnOJALDJTvEkGOYYtz2fx5wWn4oi8bSv+gr6+GC1IpHgQKMQSQCv+vMAp/oLAFeCLgkPxF4RTHIhFZoqvn0GOYcvzWfwlXF7TbSqOyNu24i/r6yvRgkSKB4FCLAG04i8JnOIvC1wBviI4FH9ZOMWBWGSmeNMMcgxbns/irwpOxRF521b8NX19PVqQSPEgUIglgFb8VYFT/DWBK8DXBYfirwmnOBCLzBTvk0GOYcvzWfwNXF7VNhVH5G1b8Tf19a1oQSLFg0AhlgBa8TcETvE3Ba4A3xIcir8pnOJALDJTvFkGOYYtz2fxtwWn4oi8bSv+jr6+Gy1IpHgQKMQSQCv+tsAp/o7AFeC7gkPxd4RTHIhFZor3zSDHsOX5LP4eLq8ZNhVH5G1b8ff19YNoQSLFg0AhlgBa8fcETvH3Ba4APxAcir8vnOLvifwr3jyDHMOW57P4h4JTcUTethX/SF8/jhYkUjwIFGIJoBX/UOAU/0jgCvBjwaH4R8IpDsQiM8U3yCDHsOX5LP4JLC/p21QckbdtxT/V18+iBYkUDwKFWAJoxT8ROMU/FbgC/ExwKP6pcIrjsMhO8RYZ5Bi2PJ/FPxeciiPytq34F/r6ZbQgkeJBoBBLAK345wKn+BcCV4BfCg7FvxBOcRwW2SnuZ5Bj2PJ8Fv8KlpeUNhVH5G1b8a/19ZtoQSLFg0AhlgBa8a8ETvGvBa4AvxEcin8tnOI4LLJTfI0Mcgxbns/i3wpOxRF521b8O339PlqQSPEgUIglgFb8W4FT/DuBK8DvBYfi3wmnOA6L7BSXGeQYtjyfxX+A5SVLbCqOyNu24j/q60/RgkSKB4FCLAG04j8InOI/ClwB/iQ4FP9ROMVxWGSneMsMcgxbns/iPwtOxRF521b8F339NVqQSPEgUIglgFb8Z4FT/BeBK8BfBYfivwinOA6L7BQvySDHsOX5LP4bLC9ZalNxRN62Ff9dX5dHCxIpHgQKsQTQiv8mcIr/LnAFuFxwKP67cIrjsMhO8VYZ5Bi2PJ/F/xCciiPytq34Cn1dGS1IpHgQKMQSQCv+h8ApvkLgCnCl4FB8hXCK47DITvHSDHIMW57P4n/C8pJlNhVH5G1b8b/MxTAVD/6jEEsArfifAqf4XwJXgMGzZ7GRaMX/Ek5xHBbZKd46gxzDluezeFERp+JFRXyKe3oRiuOKF1tQ3FywmiruFeEKsJhEca/IKV5UlH/FywQ+x7Dl+SxeB6d4uU3F6xAqXlcvQr244vUsKF4HqHhdoOL1SBSv6xSXdQgUbyPwOYYtz2fx+qSK1ydUvIFehIZxxRtaULw+UPEGQMUbkijewCku6xMoXi7wOYYtz2fxRjjF+9lUvBGh4o31IjSJK97EguKNgIo3BirehETxxk5x2YhA8bYCn2PY8nwWb0qqeFNCxZvpRWgeV7y5BcWbAhVvBlS8OYnizZzisimB4v0EPsew5fks3gKneIVNxVsQKr6GXoSWccVbWlC8BVDxNYCKtyRRfA2nuGxBoPiaAp9j2PJ8Fm9FqngrQsVb60VoE1e8jQXFWwEVbw1UvA2J4q2d4rIVgeIVAp9j2PJ8Fm+LU7zSpuJtCRVfUy9Cu7ji7Swo3hao+JpAxduRKL6mU1y2JVC8ncDnGLY8n8XbkyrenlDxtfQidIgr3sGC4u2Biq8FVLwDieJrOcVlewLFKwU+x7Dl+SzeEad4lU3FOxIqvrZehE5xxTtZULwjUPG1gYp3IlF8bae47EigeHuBzzFseT6LdyZVvDOh4gW9CF3iinexoHhnoOIFoOJdSBQvOMVlZwLFqwQ+x7Dl+SzeFaf4FJuKdyVUfB29CN3iinezoHhXoOLrABXvRqL4Ok5x2ZVA8bUEPsew5fks3p1U8e6Eiq+rF6FHXPEeFhTvDlR8XaDiPUgUX9cpLrsTKN5f4HMMW57P4j1xik+1qXhPQsXX04vQK654LwuK9wQqvh5Q8V4kiq/nFJc9CRTvIPA5hi3PZ/HepIr3JlR8fb0IfeKK97GgeG+g4usDFe9Dovj6TnHZm0DxDQU+x7Dl+SzeF6f4NJuK9yVUfAO9CH5ccd+C4n2Bim8AVNwnUXwDp7jsS6B4R4HPMWx5PotLUsUloeIlehFK44qXWlBcAhUvASpeSqJ4iVNcSgLFBwh8jmHL81m8DKf4dJuKlxEqXq4XoV9c8X4WFC8DKl4OVLwfieLlTnFZRqD42gKfY9jyfBavIFW8glDxSr0IVXHFqywoXgFUvBKoeBWJ4pVOcVlBoPhAgc8xbHk+i/fHKV5tU/H+hIpvqBdhQFzxARYU7w9UfEOg4gNIFN/QKS77EyjeSeBzDFuez+IDSRUfSKj4RnoRBsUVH2RB8YFAxTcCKj6IRPGNnOJyIIHiGwl8jmHL81l8ME7xGTYVH0yo+MZ6EYbEFR9iQfHBQMU3Bio+hETxjZ3icjCB4p0FPsew5fksPpRU8aGEim+iF2FYXPFhFhQfClR8E6Diw0gU38QpLocSKD5IAHPMeKMyW4TZBDlumkExJSZa05/8zXCJStaC2ozgJ384S0GNwCVawlpQIwgKanOWghqJS7SUtaBGEhTUFiwFtSUu0TLWgtqSoKBGsRTUaFyi5awFNZqgoLZiKagxuET7sRbUGIKC2pqloLbBJVrBWlDbEBTUWJaCGodLtJK1oMYRFNS2LAU1HpdoFWtBjScoqO1YCmp7XKJTWAtqe4KCmsBSUBNxiU5lLaiJBAW1A0tBTcIlOo21oCYRFNSOLAW1Ey7R6awFtRNBQU1mKagpuESrWQtqCkFBTWUpqGm4RGewFtQ0goKazlJQ1bg3PH3WgqomKKgZLAW1M66gaN+H2pmgoHZhKahdcQVF+z7UrgQFtRtLQe2OKyja96F2JyioPVgKak9cQdG+D7UnQUHtxVJQe+MKivZ9qL0JCmofloLaF1dQtO9D7UtQUPuxFNT+uIKifR9qf4KCOoCloA7EFRTt+1AHEhTUQSwFdTCuoGjfhzqYoKAOYSmoQ3EFRfs+1KEEBXUYS0Edjiso2vehDicoqCNYCupIXEHRvg91JEFBHcVSUEfjCor2faijCQrqGJaCmokrKNr3oWYSFNSxLAV1HK6gaN+HOo6goI5nKahZsERLaN+HmkVQUCewFNRsXEHRvg81m6CgTmQpqJNwBUX7PtRJBAV1MktBzcEVFO37UHMICuoUloKaiyso2veh5hIU1KksBXUarqBo34c6jaCg5rEU1Om4gqJ9H+p0goI6g6Wg5uMKivZ9qPkEBXUmS0GdhSso2vehziIoqAUsBXU2rqBo34c6m6CgzmEpqIW4gqJ9H2ohQUGdy1JQ5+EKivZ9qPMICmoRS0Gdjyso2vehzicoqAtYCmoxrqBo34daTFBQF7IU1EW4gqJ9H+oigoJawlJQF+MKivZ9qIsJCuoSloJaCku0lPZ9qKUEBXUpS0Fdhiso2vehLiMoqGUsBXU5rqBo34e6nKCgrmApqCtxBUX7PtSVBAV1FUtBXY0rKNr3oa4mKKhrWArqWlxB0b4PdS1BQV3HUlDX4wqK9n2o6wkK6gaWgroRV1C070PdSFBQN7EU1M24gqJ9H+pmgoK6haWgbsUVFO37ULcSFNRtLAV1O66gaN+Hup2goO5gKag7cQVF+z7UnQQFdRdLQd2NKyja96HuJiioe1gK6l5cQdG+D3UvQUHdx1JQ9+MKivZ9qPsJCuoBloJ6EFdQtO9DPUhQUA8hcwySq2skF9xvqv6jgR4PN8abG+MtjPEoY7yVMd7aGI81xtsa4+2M8QRjvIMx3tEYTzbGU43xdGM8wxjvYox3M8Z7GOO9jPE+xng/Y3yAMT7IGB9ijA8zxkcY46OM8THG+FhjfLwxPsEYn2iMTzbGpxjjU43xPGN8hjE+0xgvMMbnGONzjfEiY3yBMb7QGC8xxpcY40uN8TJjfIUxvsoYX2OMrzPGNxjjm4zxLcb4NmN8hzG+yxjfY4zvM8YPGOOH9PhhdX1E9UdVf0z1x1V/QvUnVX9K9adVf0b1Z1V/TvXnVX9B9RdVf0n1l1V/RfVXVX9N9ddVf0P1N1V/S/W3VX9H9XdVf0/191X/QPUPVf+o6L9oeuLvrUhfB+urX7MmJ4uMvpmweZaYa/GxXoRPivSCFOtrMNE5Fgv+UFEsqeIMF/HffgNXz1jVgmeo6WdF3+afFOE212ZRflzEV5Sf6kX4LF6UnyYU5WcWihJRSFFRfgosys/ARRmtd9ZFiczbzPfzogwT/rwI/7lfAIshq+f+wlhh0Of+TwLW7AeuerU19v9lW/WjW52FgDIamGvxpV6Er+ICBoFCLIHiDBfsX35WiS5K+SWwwL/KaCNRBRfl+WVGX7le/vb5P8/8NeyZV/3/Li4Wf2+gNZX/tO9+zZr8OoN9R+f4MDJHe+fYEh+n+DRrin+jF+HbuOLf/j8U92vUVl+wmir+DVCKbzPaSLTi31hS3K9Rg+zzf575O+Azsyr+HYHig0U2tQkuztW/EmtanN/jNkba/A3M94TfXD/oRfgx/s31Y+bfXKsvWE2/uX4AFuCPJN9cPzjF5fcEij9SRKL4d8Afop9IFf+JUPGf9SL8Elf8FwuK/wRU/GdgAf5CovjPTnH5E4HiGwt8jmHL81n8V9zGlNhU/FdCxX/Ti/B7XPHfLSj+K1Dx34AF+DuJ4r85xeWvBIo/WhvP4stJFV9OqPgfehFWxBVfYUHx5UDF/wAW4AoSxf9wisvlBIoPEfgcw5bns/hK3MaU2lR8JaHif+pF+Cuu+F8WFF8JVPxPYAH+RaL4n05xuZJA8cdq41k8SA6Ul1XFEXnbVrxI33ieWF3xIFCIJYBW3Fywmipe5OEK0PM4FC/ynOJALDJTfKjA5xi2PJ/Fi3EbU2ZT8WKPT/E6+qZuXPG6FhQvBipeB6h4XRLF6zjFZTGB4o/XxrN4PVLF63l8itfXNw3iijewoHg9oOL1gYo3IFG8vlNc1iNQfBOBzzFseT6LN8RtTLlNxRt6fIo30jeN44o3tqB4Q6DijYCKNyZRvJFTXDYkUPyJ2ngWb0KqeBOPT/Gm+qZZXPFmFhRvAlS8KVDxZiSKN3WKyyYEig8T+BzDluezeHPcxvSzqXhzj0/xFvpmjbjia1hQvDlQ8RZAxdcgUbyFU1w2J1D8ydp4Fm9JqnhLj0/xVvqmdVzx1hYUbwlUvBVQ8dYkirdyisuWBIpvKvA5hi3PZ/E2uI2psKl4G49P8bb6Zs244mtaULwNUPG2QMXXJFG8rVNctiFQ/KnaeBZvR6p4O49P8fb6Zq244mtZULwdUPH2QMXXIlG8vVNctiNQfDOBzzFseT6Ld8BtTKVNxTt4fIp31DdrxxVf24LiHYCKdwQqvjaJ4h2d4rIDgeJP18azeCdSxTt5fIp31jeFuOIFC4p3AireGah4gUTxzk5x2YlA8eECn2PY8nwW74LbmCqbinfx+BTvqm/WiSu+jgXFuwAV7wpUfB0Sxbs6xWUXAsWfqY1n8W6kinfz+BTvrm/WjSu+rgXFuwEV7w5UfF0Sxbs7xWU3AsVHCHyOYcvzWbwHbmOm2FS8h8eneE99s15c8fUsKN4DqHhPoOLrkSje0ykuexAo/mxtPIv3IlW8l8eneG99s35c8fUtKN4LqHhvoOLrkyje2ykuexEovrnA5xi2PJ/F++A2ZqpNxft4fIr31TcbxBXfwILifYCK9wUqvgGJ4n2d4rIPgeLP1cazuE+quO/xKS71TUlc8RILivtAxSVQ8RISxaVTXPoEio8U+BzDluezeCluY6bZVLzU41O8TN+UxxUvt6B4KVDxMqDi5SSKlznFZSmB4s/XxrN4P1LF+3l8ilfom8q44pUWFO8HVLwCqHglieIVTnHZj0DxLQQ+x7Dl+SxehduY6TYVr/L4FO+vbzaMK76hBcWrgIr3Byq+IYni/Z3isopA8Rdq41l8AKniAzw+xQfqm43iim9kQfEBQMUHAhXfiETxgU5xOYBA8S0FPsew5fksPgi3MdU2FR/k8Sk+WN9sHFd8YwuKDwIqPhio+MYkig92istBBIq/WBvP4kNIFR/i8Sk+VN9sEld8EwuKDwEqPhSo+CYkig91isshBIqPEvgcw5bns/gw3MbMsKn4MI9P8U31zWZxxTezoPgwoOKbAhXfjETxTZ3ichiB4i/VxrP4cFLFh3t8io/QN5vHFd/cguLDgYqPACq+OYniI5zicjiB4qMFPsew5fksPhK2MdK3qfhIj0/xLfTNlnHFt7Sg+Eig4lsAFd+SRPEtnOJyJIHiL9fGs/goUsVHeXyKj9Y3W8UV38qC4qOAio8GKr4VieKjneJyFIHiWwl8jmHL81l8DE5xaVPxMR6f4lvrm23iim9jQfExQMW3Biq+DYniWzvF5RgCxV+pjWfxsaSKj/X4FB+nb7aNK76tBcXHAhUfB1R8WxLFxznF5VgCxccIfI5hy/NZfDxO8RKbio/3+BTfTt9sH1d8ewuKjwcqvh1Q8e1JFN/OKS7HEyj+am08i08gVXyCx6f4RH2zQ1zxHSwoPgGo+ESg4juQKD7RKS4nECi+tcDnGLY8n8Un4RQvtan4JI9P8R31zU5xxXeyoPgkoOI7AhXfiUTxHZ3ichKB4q/VxrP4ZFLFJ3t8ik/RN1Pjik+1oPhkoOJTgIpPJVF8ilMc8kMXtaxy3Ebgcwxbns/i03CKl9lUfJrHp/h0fVMdV7zaguLTgIpPBypeTaL4dKe4nEag+Ou18Sw+g1TxGR6f4jvrm13iiu9iQfEZQMV3Biq+C4niOzvF5QwCxccKfI5hy/NZfFec4uU2Fd/V41N8N32ze1zx3S0ovitQ8d2Aiu9OovhuTnG5K4Hib9TGs/gepIrv4fEpvqe+2Suu+F4WFN8DqPieQMX3IlF8T6e43INA8XECn2PY8nwW3xuneD+biu/t8Sm+j77ZN674vhYU3xuo+D5AxfclUXwfp7jcm0DxN2vjWXw/UsX38/gU31/fHBBX/AALiu8HVHx/oOIHkCi+v1Nc7keg+LYCn2PY8nwWPxCneIVNxQ/0+BQ/SN8cHFf8YAuKHwhU/CCg4geTKH6QU1weSKD4W7XxLH4IqeKHeHyKH6pvDosrfpgFxQ8BKn4oUPHDSBQ/1CkuDyFQfLzA5xi2PJ/FD8cpXmlT8cM9PsWP0DdHxhU/0oLihwMVPwKo+JEkih/hFJeHEyj+dm08ix9FqvhRHp/iR+ubY+KKH2NB8aOAih8NVPwYEsWPdorLowgU307gcwxbns/iM3GKV9lUfKbHp/ix+ua4uOLHWVB8JlDxY4GKH0ei+LFOcTmTQPF3auNZ/HhSxY/3+BSfpW9OiCt+ggXFjwcqPguo+Akkis9yisvjCRTfXuBzDFuez+KzcYpPsan4bI9P8RP1zUlxxU+yoPhsoOInAhU/iUTxE53icjaB4u/WxrP4yaSKn+zxKT5H35wSV/wUC4qfDFR8DlDxU0gUn+MUlycTKD5B4HMMW57P4nNxik+1qfhcj0/xU/XNaXHFT7Og+Fyg4qcCFT+NRPFTneJyLoHi79XGs/g8UsXneXyKn65vzogrfoYFxecBFT8dqPgZJIqf7hSX8wgUnyjwOYYtz2fx+TjFp9lUfL7Hp/iZ+uasuOJnWVB8PlDxM4GKn0Wi+JlOcTmfQPH3a+NZfAGp4gs8PsXP1jfnxBU/x4LiC4CKnw1U/BwSxc92issFBIrvIPA5hi3PZ/GFOMWn21R8ocen+Ln65ry44udZUHwhUPFzgYqfR6L4uU5xuZBA8Q9q41l8Eaniizw+xc/XNxfEFb/AguKLgIqfD1T8AhLFz3eKy0UEik8S+BzDluez+GKc4tU2FV/s8Sl+ob65KK74RRYUXwxU/EKg4heRKH6hU1wuJlD8w9p4Fl9CqvgSj0/xi/XNJXHFL7Gg+BKg4hcDFb+ERPGLneJyCYHiOwp8jmHL81l8KU7xGTYVX+rxKX6pvrksrvhlFhRfClT8UqDil5EofqlTXC4lUPyj2ngWX0aq+DKPT/HL9c0VccWvsKD4MqDilwMVv4JE8cud4nIZgeI7CWCOGW9UZoswmyDHKz23UXKzovzneJXbKF+OINioq91G+XIkwUZd4zbKl1sSbNS1bqN8OZpgo65zG+XLMQQbdb3bKF9uQ7BRN7iN8uU4go260W2UL8cTbNRNbqN8uT3BRt3sNsqXEwk26ha3Ub6cRLBRt7qNUr+ZJtio29xG+XIKwUbd7jbKl9MINuoOt1G+rCbYqDvdRvlyZ4KNusttlC93Jdiou91G+XJ3go26x22UL/ck2Kh73Ub5cm+CjbrPbZQv9yXYqPvdRvlyf4KNesBtlC8PJNioB91G+fJggo16yG2ULw8l2KiH3Ub58nCCjXrEbZQvjyTYqEfdRvnyaIKNesxtlC9nEmzU426jfHkcwUY94TbKl7MINupJt1G+nE2wUU+5jfLlSQQb9bTbKF/OIdioZ9xG+XIuwUY96zbKl6cRbNRzbqN8eTrBRj3vNsqX8wk26gW3Ub48i2CjXnQb5cuzCTbqJbdRvlxIsFEvu43y5XkEG/WK2yhfnk+wUa+6jfLlYoKNes1tlC8vItio191G+fJigo16w22UL5cSbNSbbqN8eRnBRr3lNsqXlxNs1Ntuo3x5JcFGveM2ypdXE2zUu26jfHktwUa95zbKl9cTbNT7bqN8eSPBRn3gNsqXNxNs1Iduo3x5K8FGfeQ2ype3E2zUx26jfHknwUZ94jbKl3cTbNSnbqN8eS/BRn3mNsqX9xNs1Oduo3z5IMFGfYHcqCC5ukZywX3w33vUQI+vMsZXG+NrjPG1xvg6Y3y9Mb7BGN9ojG8yxjcb41uM8a3G+DZjfLsxvsMY32mM7zLGdxvje4zxvcb4PmN8vzF+wBg/aIwfMsYPG+NHjPGjxvgxY/y4MX7CGD9pjJ8yxk8b42eM8bPG+Dlj/LwxfsEYv2iMXzLGLxvjV4zxq8b4NWP8ujF+wxi/aYzfMsZvG+N3jPG7xvg9Y/y+Mf7AGH9ojD8yxh8b40+M8afG+DNj/Lkx/kKPv1TXr1T/WvVvVP9W9e9U/171H1T/UfWfVP9Z9V9U/1X131T/XfXlqv+h+grVV6r+p+p/aQmLVPdUL1a9jup1Va+nen3VG6jeUPVGMTE9fR2sr37NmpxifFZN/8sGv/TwUGbxzFOBz/wVyTNPAz7z1yTPPB34zN+QPHM18Jm/JXnmGcBn/o7kmXcGPvP3JM+8C/CZfyB55l2Bz/wjyTPvBnzmn0ieeXfgM/9M8sx7AJ/5F5Jn3hP4zL+SPPNewGf+jeSZ9wY+8+8kz7wP8JmXkzzzvsBn/oPkmfcDPvMKkmfeH/jMK0me+QDgM/9J8swHAp/5L5JnPgj4zMHvNRme+WDgMxeRPPMhwGf2SJ75UOAzF5M882HAZ65D8syHA5+5LskzHwF85nokz3wk8JnrkzzzUcBnbkDyzEcDn7khyTMfA3zmRsBnDv4tvI7+rJnG8xfpNSjW88E7I/VUry9W/bt5Q9Ubqd5Y9SaqN1W9merNVW+h+hqqt1S9leqtVW+jelvV11S9nertVV9L9Q6qd1R9bdU7qd5Z9YLqXVTvqvo6qndTvbvq66reQ/Weqq+nei/Ve6u+vup9VO+r+gbBmqguVS8J1lr1MtXLVe+neoXqlapXqd5f9Q1VH6D6QNU3Un2Q3qeNVR+i+lDVN1F9mOqbqr6Z6sNVH6H65qqPVH0L1bdUfZTqo1XfSvUxqm+t+jaqj1V9nOrbqj5e9e1U3171CapPVH0H1SepvqPqO6k+WfXg3+6nqh78227wb53Bv/0F/xYW/NtQ8G8lwb8dBL9LD363HPyuNfjdY/C7uOB3U8HvaoLfXQR/lw/+bhv8XS/4u0/wd4HgbBycFYOzU3CWCL5bg++awN7AouBn8xjx92bG5uirJ1o0m/DQ7g+bf+7MlLnzUuYuSpm7LGXu6pS5G1Pmbk+Zuzdl7uGUuSdT5p5PmXs1Ze7tlLkPU+Y+T5n7NmXu55S5P1Lmior+ea5+ylzTlLlWKXPtU+Y6p8x1T5nrnTInU+YqUuYGpswNTZkbkTI3OmVuXMrcxJS5KSlzO6fM7Zkyt3/K3KEpc0enzM1KmZuTMnd6ytzZKXPnp8xdnDJ3ecrctSlzN6fM3Zkyd3/K3KMpc0+nzL2YMvd6yty7KXMfp8x9mTL3fcrcrylzK1Pmir1/nmuYMrcwZW5xytylKXNXpczdkDJ3W8rcPSlzD6XMPZEy91zK3Cspc2+lzH2QMvdZytw3KXM/pcwtT5mL3mJPmquXMtckZa5lyly7lLlOKXPdUuZ6pcz5KXP9UuYGpMwNSZkbnjI3KmVubMrchJS5ySlzM1Lm9kiZ2y9l7pCUuaNS5o5PmTs5ZW5eytyClLlFKXNLUuaWpcxdkzJ3U8rcHSlz96XMPZIy91TK3Aspc6+lzL2TMvdRytwXKXPfpcz9kjK3ImXOq/PPcw1S5pqlzLX+h7no9yIN9LWhvjbS1+DrNkh1sL73a9ZKos9vnM3n+/XF31sjY9w4Nhc9f52E/7mif7j3Yte0PxuPm7GmCXPRZ7bSVzPf6Dkaxq5tjM8FrqWMPr91Np+fuFdtjHHr2HOa6z0YlEP0edH/6UZd8ffmxeaiPxv/mSnC5yfjuRQn/O+KWlQzrY1YtJ7/B6yMO1AhNAQA",
  "debug_symbols": "nZrNbh1HDoXfRWsvuqpY/MmrDIJAcZRAgCAbih1gEPjdp+/t73CchRfRioyV/mg3dUTyXP398NvTr1//+OX59fdPfz789J+/H359e355ef7jl5dPHx+/PH96Pf/0728fHvSfv3x5e3o6/+jhu6+fT31+fHt6/fLw0+vXl5cPD389vny9/09/fn58vccvj2/nV48PD0+vv53xBP7+/PJ0y759+P/Tx48fDePZMUY/vf/5+Pjx4+uYPL+O9Z7nfen5mO96vutHvuP5vfT8tvfU31N//z3fVX90/VnveT5cz9e7/v4eev5d73/vrh/v6b/3+/P9nvoe+t73PN7xfCx9/4f9+P2vHwPmcegNzGN89wr+BWFEE+b+nvDz+R+PH5/f/vFD42HMOr/dPzyMdRAHcRLXw092i0bcRD9f0y0GMYl1RTt5cYuDOImLaMSTV7foxCAm8eSNsy9jH0rGVWFP4iIacRP9qrAhboi7rugHcRAnBRygA3SAzj/Z+Sd7XgUcYAAMgDGJi2gUCIABMAAG7zB4h8k7TIAJMAGmEXmH6RRIgAkwAdZB5BUWTSmABbAAFk0pXmElBeoCnt+wxEGcxEW8ujyPCzgPJwYxidcrnIMmzwFwABwAhxE38WryHAAHwAFwHsRBpMlzApwAJ8DpxCBeTZ4T4AK4AK5JXESaPBdAhDIRykQoE6FMhDINoAE0gGZEXqHR5GkADaAB3PQEncx9NXlugBvgBrjpCTqZmybPDdABOkCnJ+hkOk12gA7QATo9QScz1OQAGAADYNATdDKDJgfAABgAk56gk5lqcgJMgAkw6Qk6mUmTE2ABLIBFT9DJLDW5ABbAAlj0BJ2s42ryOi7gOiZxEY24iTR5HQEgiQDHQRzEq8lrABwAB8DhxCDS5DUAToAT4JzERbyavCbACXACnEm8XuFaNHktgAvgAriMuIlXk9cCuAAugHYQeYVGk5cBNIAG0JzIK7SrycsAboAb4KYn6GRtmrwYKGsD3AA3PUEny2kyA2U5QAfo9ASdLFeTGSjLATrAoCfoZAVNZqCsABgAg56gkxVqMgNlJcAEmPQEnaykyQyUlQATYNITdLJKTWagrAJYAIueoJNVNJmBsgpgXUA7DuIg0mRjoNhhxE10YhCvJhsDxQbAAXBM4iLSZGOg2AA4AI4kXq/Q5tVkY6DYBDgBTiNuIk02BopNgBPgOoiDeDXZGCi2AC6Ay4lBpMnGQDEDaABtEnmFbF7GQDE2L2PzMjYvQyemxcsYKMbiZSxexuJl6MRYvIyBYixexuJlLF6GTkyLlzFQjMXLWLyMxcvQibF4GQPFWLyMxctYvAydmBYvY6AYi5exeBmLl6ETY/EyBoqxeBmLl7F4GToxLV7GQDEWL2PxMhYvQyfG4mUMFGPxMhYvY/EydGJavIyBslm8NovXZvHa6GSzeG0Gymbx2ixem8Vro5OtxWszUDaL12bx2ixeG51sFq/NQNksXpvFa7N4bXSytXjtm1DGuCWmZCtxJaEklRTJfa7ck6FkKhF5ibxEXiIvkZfIS2QT2UQ2kU1kE9lENpFNZBPZRN4ib5G3yFvkLfIWeYu8Rd4ib5FdZBfZRXaRXWQX2UV2kV1kFzlEDpFD5BA5RA6RQ+QQOUQOkVPkFDlFTpFT5BQ5RU6RU+QUuUQukUvkErlELpFL5BK5RC7IfhxKhpKpZCkxJVuJKwklqUTkIfIQeYg8RB4iD5GHyEPkIfIQeYo8RZ4iS4MuDbo06NKgS4MuDbo06NKgS4MuDbo06NKgS4MuDbo06NKgS4MuDbo06NKgS4MuDbo06NKgS4MuDbo06NKg3zU4b8lUspSYkn03P/wmwXsMYhLrboL4TX73OIjXD01nkDmDzBlk7tcPTb/p7h6vH5rOIHMGmTPIPPih6XfJ3ROITDJnkjmTzJlkflPbrQKnkTPJnEnmTDJnkvldZ7cCnEbOJHMmmTPJnEnmdfk6zmnkTDJnkjmTzJlkfhfXrQCnkTPJgkkWTLJgksVxGUXBaRRMsmCSBZMsmGRxYBQFp1EwyYJJFkyyYJLFTUy3ApxGwSQLJlkwyYJJFncZ3QpwGgWnUWAhBBZCYCHEvLocnEbBaRRYCIGFEFgIsWhycBoFp1FgIQQWQmAhxLqaHJxGwWkUWAiBhRBYCGE0OTiNgtMosBACCyGwEGJfTQ5Oo+A0CiyEwEIILITYNDk4jYLTKLAQAgshEEo4TeY0Ck6jwEIILIRAKOFqMqdRcBoFFkJgIQQ6iaDJnEbBaRRYCIGFEOgkUk3mNApOo8BCCCyEQCeRNJnTKDiNAgshsBACnUSpyZxGwWkUWAiBhRDoJOpqcnIaJadRYiEkFkKikzxocnIaJadRYiEkFkKikxxXk5PTKDmNEgshsRASneSgyclplJxGiYWQWAiJTnJeTU5Oo+Q0SiyExEJIdJKTJienUXIaJRZCYiEkOsl1NTk5jZLTKLEQEgsh0UkaTU5Oo+Q0SiyExEJIdJJ2NTk5jZLTKLEQEgsh0UlumpycRslplFgIiYWQ6CQ3TeY0Sk6jxEJILIREJ+lqMqdRcholFkJiISQ6yaDJnEbJaZRYCImFkOgkQ01moCSnUWIhJBZCopNMmsxASU6jxEJILIREJ5lqMgMlOY0SCyGxEBKdZNFkBkpyGiUWQmIhFDqpgyYXA6U4jQoLobAQCp3UcTW5GCjFaVRYCIWFUOikBk0uBkpxGhUWQmEhFDqpcTW5GCjFaVRYCIWFUOikJk0uBkphIRQWQmEhFDqpdTW5GCiFhVBYCIWFUOikFk0uBkphIRQWQmEhFDopPrwpBkphIRQWQmEhFDopfXhTDJTCQigshMJCKHRS+2pyMVAKC6GwEAoLodBJuZrMQCk2r2LzKjavQifF5lUMlGLzKjavYvMqdFJavIqBUixexeJVLF6FTorFqxgoxeJVLF7F4lXopLR4FQOlWLyKxatYvAqdFItXMVCKxatYvIrFq9BJafEqBkqxeI2DzetMhpKphE/pDqbKmWwlriSUpBJ9VncMoYfQQ2jWsDMxJZtiQ+gh9BCaZWwciOdMhopNoafQU2hWsjNxJUGxKfQUegnNYnYmU8lSsSX0ElqfhB76KPTQZ6EHC9o4TGgT2oRmSTsTvWqtaWfGYXNm0Vl2Vsp03JzZ6Gx2tjqzznZnXWN3jd01dtfwruFdw7uGdw3vGt41vGt41/Cu4V0jukZ0jega0TWia0TXiK4RXSO6RnSN7BrZNbJrZNfIrpFdI7tGdo3sGtk1qmtU16iuUV2jukZ1jeoa1TWqa8iRGEOWxJmNzmZnqzPrbHfmnUVn2VnXGF3j7k6sezY7W51ZZ7sz7yw6y85K2d2muLKuMbvG7Bqza8yuMbvG7Bqza8yusbrG6hqra6yusbrG6hqra6yusbrG6hrWNaxr3M2L2+9x/PX49vz468vTn9cvav3+9fXjd7+39eW/n/UV/WbX57dPH59++/r2dPt1jfvXvv387X8=",
  "file_map": {
    "50": {
      "source": "fn main(leaf: [u8; 32], path: [u8; 64], index: u32, root: [u8; 32]) {\n    compute_root(leaf, path, index, root);\n}\n\nfn compute_root(leaf: [u8; 32], path: [u8; 64], _index: u32, root: [u8; 32]) {\n    let mut current = leaf;\n    let mut index = _index;\n\n    for i in 0..2 {\n        let mut hash_input = [0; 64];\n        let offset = i * 32;\n        let is_right = (index & 1) != 0;\n        let a = if is_right { 32 } else { 0 };\n        let b = if is_right { 0 } else { 32 };\n\n        for j in 0..32 {\n            hash_input[j + a] = current[j];\n            hash_input[j + b] = path[offset + j];\n        }\n\n        current = std::hash::blake3(hash_input);\n        index = index >> 1;\n    }\n\n    // Regression for issue #4258\n    assert(root == current);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
